# orcm

./: .travis.yml  VERSION  build.sh  configure.ac  index.html  install-dependencies.sh  params.json
config/: orcm_config_files.m4
contrib/platform/intel/hillsboro/: orcm-linux  orcm-linux.conf  orcm-nightly-build-static.conf
opal/runtime/: opal_info_support.c  opal_init.c
orcm/mca/db/odbc/: db_odbc.c
orcm/mca/sensor/componentpower/: sensor_componentpower.c
orcm/mca/sensor/coretemp/: sensor_coretemp.c
orcm/mca/sensor/freq/: sensor_freq.c
orcm/mca/sensor/ipmi/: sensor_ipmi.c
orcm/mca/sensor/nodepower/: sensor_nodepower.c
orcm/mca/sensor/resusage/: sensor_resusage.c
orcm/mca/sst/orcmd/: sst_orcmd.c
orcm/mca/sst/orcmsd/: sst_orcmsd.c
orcm/runtime/: orcm_globals.h
orcm/tools/: Makefile.am
orcm/tools/orcmd/: orcmd.c
orcm/tools/orcmsd/: orcmsd.c
orcm/tools/orun/: orun.c
orcm/util/: Makefile.am
orte/mca/oob/tcp/: oob_tcp_sendrecv.c
