# -*- makefile -*-
#
# Copyright (c) 2013-2014 Intel, Inc. All rights reserved.
#
# $COPYRIGHT$
# 
# Additional copyrights may follow
# 
# $HEADER$
#

SUBDIRS += \
        tools/octl \
        tools/oqueue \
        tools/orcm-info \
        tools/orcmd \
        tools/orcmsched \
        tools/orun \
        tools/osub \
        tools/orcmsd \
        tools/wrappers

DIST_SUBDIRS += \
        tools/octl \
        tools/oqueue \
        tools/orcm-info \
        tools/orcmd \
        tools/orcmsched \
        tools/orun \
        tools/osub \
        tools/orcmsd \
        tools/wrappers
